--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <img id="launch" src="assets/images/chat.png" onclick="toggleWidget()">
   <div id="container" class="container container-normal container-invisible">
     <iframe class="iframe" id="iframe"
-      src="https://odcsdev1-odcsdevinst2.builder.test.ocp.oc-test.com/ic/builder/rt/JL020821D/1.0/webApps/dcs/">
+      src="https://ehmu-test-odcsvbcs-05112135-4813-eira.builder.ocp.oraclecloud.com/ic/builder/rt/EMBEDDED/1.0/webApps/dcs/">
     </iframe>
   </div>
 </body>
